--- a/Public/Index/css/style.css
+++ b/Public/Index/css/style.css
@@ -1,46 +1,19 @@
-body,a,p,span,ul,ol{  margin: 0;  padding: 0;  border: 0;}
-a{text-decoration: none;color: #000000;}
-#header{
-    min-width: 1080px;
-    width: 100%;
-    height: 70px;
-    border-bottom: 1px solid #000;
-    overflow: hidden;
-}
-.logo{
-    width: 30px;
-    height: 30px;
-    margin: 20px 30px;
-}
-
-.loginer{
-    float: right;
-    margin: 20px 30px;
-}
-#main{
-    width: 1080px;
-    border-right: 1px solid #000000;
-    border-left: 1px solid #000000;
-    margin: 0 auto;
-    overflow: hidden;
-}
-.left{
-    float: left;
-    min-height: 700px;
-    width: 110px;
-    border-right: 1px solid #000000;
-    text-align: center;
-}
-.content{float: right;width: 960px;min-height: 700px;}
-iframe{
-    margin:0 auto;
-    width: 100%;
-    min-height:700px;
-    border:0;
-    scrolling:yes;
-    height: auto;
-}
-#bottom{
-    height: 80px;
-    text-align: center;
-}
+body{font-size:12px;font-family:\5B8B\4F53;color:#484848;line-height:24px}
+body,html,a,img,div,form,select,input,ul,ol,li,h1,h2,h3,h4,h5,h6,dd,dl,dt,p,label,em,span,i{margin:0;padding:0}
+html,body {overflow-x:hidden}
+body{position:relative;}
+a{color:#484848;text-decoration:none}
+a:hover{color:#fb6400;text-decoration:underline}
+ol,ul,li{list-style:none}
+em,i{font-style:normal}
+img{border:none}
+#header{min-width: 1080px;width: 100%;height: 68px;}
+#wrap{width: 1080px;margin: 0 auto;}
+#wrap #left{ float: left;width: 768px;}
+#wrap #left > ul{width: 90%;margin: 0 auto;}
+#wrap #left > ul > li{margin: 20px 10px auto;border-bottom: 1px dashed #000}
+#wrap #left > ul > li > a {display: block;line-height: 28px;font-size: 18px;margin-bottom: 18px}
+#wrap #left > ul > li span{float: right}
+#wrap #right{float: right}
+#wrap #right .wrap-link{width: 288px;border-bottom: dashed}
+#wrap #right .wrap-link > ul > li{width: 100%;overflow: hidden}
