--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-    <title>MangoLau's Blog</title>
-
-    <meta charset="UTF-8" />
-
-    <link rel="stylesheet" href="__PUBLIC__/Index/css/style.css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-</head>
-<body>
-<div id="header"></div>
+<include file="Public/header" />
 <div id="wrap">
     <!-- 首页内容左侧 start -->
     <div id="left">
         <ul>
             <volist name="newest" id="v">
                 <li>
-                    <a href="{:U('Content/baseList',array('id'=>$v['id']))}">{$v['title']}<span>{$v['created']}</span></a>
+                    <a href="{:U('Content/baseList',array('id'=>$v['id']))}" title="{$v['title']}">{$v['title']}<span>{$v['created']}</span></a>
                     <div>
                         {:cuthtml(html_entity_decode($v['content']), 300);}
                     </div>
@@ -26,46 +14,6 @@
         </ul>
     </div>
     <!-- 首页内容左侧 end -->
-    <!-- 首页内容右侧 start -->
-    <div id="right">
-        <!-- 新发表文章 start -->
-        <div class="wrap-link">
-            <h2>最新文章</h2>
-            <ul>
-                <volist name="newest" id="v">
-                    <li><a href="{:U('Content/baseList',array('id'=>$v['id']))}">{$v['title']}</a></li>
-                </volist>
-            </ul>
-        </div>
-        <!-- 新发表文章 end -->
-        <!-- 热点文章 start -->
-        <div class="wrap-link">
-            <h2>最热文章</h2>
-            <ul>
-                <volist id="v" name="hotest">
-                    <li><a href="{:U('Content/baseList',array('id'=>$v['id']))}">{$v['title']}</a></li>
-                </volist>
-            </ul>
-        </div>
-        <!-- 热点文章 end -->
-        <!-- 随机文章 start -->
-        <div class="wrap-link">
-            <h2>随机文章</h2>
-            <ul>
-                <volist name="rands" id="v">
-                    <li><a href="{:U('Content/baseList',array('id'=>$v['id']))}">{$v['title']}</a></li>
-                </volist>
-            </ul>
-        </div>
-        <!-- 随机文章 end -->
-    </div>
-    <!-- 首页内容右侧 end -->
+    <include file="Public/righter" />
 </div>
-
-
-
-<script src="__PUBLIC__/Admin/js/jquery.min.js"></script>
-
-
-</body>
-</html>
+<include file="Public/footer" />
