--- a/Public/Index/css/style.css
+++ b/Public/Index/css/style.css
@@ -8,7 +8,7 @@ ol,ul,li{list-style:none}
 em,i{font-style:normal}
 img{border:none}
 #header{min-width: 1080px;width: 100%;height: 68px;}
-#wrap{width: 1080px;margin: 0 auto;}
+#wrap{width: 1080px;margin: 0 auto;overflow: hidden}
 #wrap #left{ float: left;width: 768px;}
 #wrap #left > ul{width: 90%;margin: 0 auto;}
 #wrap #left > ul > li{margin: 20px 10px auto;border-bottom: 1px dashed #000}
@@ -17,3 +17,5 @@ img{border:none}
 #wrap #right{float: right}
 #wrap #right .wrap-link{width: 288px;border-bottom: dashed}
 #wrap #right .wrap-link > ul > li{width: 100%;overflow: hidden}
+#footer{width: 1080px;margin: 20px auto 0 auto;}
+#footer .copyright{text-align: center}
