--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -43,7 +43,7 @@
                 <a href="#"><i class="icon icon-th-list"></i> <span>{$vo['title']}</span> <span class="label">{:count($vo['child'])}</span></a>
                 <ul>
                     <volist name="vo['child']" id="v">
-                    <li><a href="{:U($vo['name'].'/'.$v['name'])}" target="_main">{$v['title']}</a></li>
+                    <li><a href="{:U($vo['name'].'/'.$v['name'])}" class="link" onclick="return false;" target="_main">{$v['title']}</a></li>
                     </volist>
                 </ul>
             </li>
@@ -53,17 +53,20 @@
 </div>
 
 <div id="i-content">
-    <iframe name="_main" style="min-width: 960px;width: 100%;height: 800px;"></iframe>
+    <iframe name="_main" id="_main" style="min-width: 960px;width: 100%;height: 800px;"></iframe>
 </div>
-
-
-
-
 <script src="__PUBLIC__/Admin/js/jquery.min.js"></script>
 <script src="__PUBLIC__/Admin/js/jquery.ui.custom.js"></script>
 <script src="__PUBLIC__/Admin/js/bootstrap.min.js"></script>
 <script src="__PUBLIC__/Admin/js/unicorn.js"></script>
-
-
+<script>
+    $(function(){
+        $('#i-content>iframe').attr("src", "{:U('dashboard')}");
+        $(".link").click(function(){
+            var _link = $(this).attr("href");
+            $("#_main").attr("src",_link);
+        });
+    });
+</script>
 </body>
 </html>
